--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "author": "James Smith <james@loopj.com>",
     "keywords": ["ansi", "color", "console"],
     "directories": {"lib": "./lib"},
-    "repositories": [
+    "repository": [
     {
         "type": "git",
         "url": "git://github.com/loopj/commonjs-ansi-color.git"
