--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
     "name": "ansi-color",
-    "description": "This module provides basic ANSI color code support, to allow you to format your console output with foreground and background colors as well as providing bold, italic and underline support.",
     "version": "0.2.1",
+    "description": "This module provides basic ANSI color code support, to allow you to format your console output with foreground and background colors as well as providing bold, italic and underline support.",
     "author": "James Smith <james@loopj.com>",
-    "keywords": ["ansi", "color", "console"],
-    "directories": {"lib": "./lib"},
-    "repository": [
-    {
+    "directories": {
+        "lib": "./lib"
+    },
+    "main": "./lib/ansi-color.js",
+    "repository": {
         "type": "git",
-        "url": "git://github.com/loopj/commonjs-ansi-color.git"
-    }
+        "url": "https://github.com/loopj/commonjs-ansi-color.git"
+    },
+    "bugs": {
+        "url": "https://github.com/loopj/commonjs-ansi-color/issues"
+    },
+    "keywords": [
+        "ansi",
+        "color",
+        "console"
     ],
-    "main": "./lib/ansi-color.js"
+    "license": "BSD License",
+    "contributors": [{
+        "name": "vBm",
+        "email": "the.vbm@gmail.com"
+    }]
 }
